Added README documentation. Added and updated utility scripts.